Add installation instruction for starting project