@@ -6,6 +6,14 @@
 * [JavaFX 12](https://openjfx.io/openjfx-docs/#gradle)
 * Gradle 5.5
 
+### Installation
+
+* Install java and openjfx
+* Before start, needs to be added to VM options: 
+
+`--module-path "<YOUR JAVA DIR>\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics`
+
+
 ### About
 
 
